--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,14 @@
       <artifactId>httpcore</artifactId>
       <version>4.4.1</version>
     </dependency>
+    
+	<dependency>
+		<groupId>com.alibaba</groupId>
+		<artifactId>druid</artifactId>
+		<version>1.0.23</version>
+	</dependency>    
+    
+    
   </dependencies>
 
   <build>
